--- a/firstCssStyle/selectors.css
+++ b/firstCssStyle/selectors.css
@@ -15,7 +15,7 @@ button {
 
 #signup {
     font-size: 30px;
-    background-color: #0a9396;
+    background-color: #005f73;
     color: #94d2bd;
 }
 
@@ -112,4 +112,25 @@ button:hover {
 
 .post:nth-of-type(2n) {
     background-color: #e0d0a2;
+}
+
+/* .square:nth-of-type(2n) {
+    background-color:black;
+}
+#board {
+    background-color: red;
+} */
+
+
+h2::first-letter {
+    color: #ca6702;
+    font-size: 35px;
+}
+
+p::first-line {
+    color: purple;
+}
+
+p::selection {
+    background-color: #94d2bd;
 }
