--- a/firstCssStyle/selectors.css
+++ b/firstCssStyle/selectors.css
@@ -16,7 +16,7 @@ button {
 #signup {
     font-size: 30px;
     background-color: #005f73;
-    color: #94d2bd;
+    color: #e9d8a6;
 }
 
 #signup:hover {
@@ -93,7 +93,7 @@ footer > a {
     font-size: 20px;
 }
 
-input[type="password"] {
+input[type="password"], #search {
     color: #ee9b00;
 }
 
@@ -131,6 +131,10 @@ p::first-line {
     color: purple;
 }
 
-p::selection {
+::selection {
     background-color: #94d2bd;
+}
+
+section h2 {
+    margin-left: 30px;
 }
